fix z-index for dropdown

--- a/app/assets/stylesheets/settings.sass
+++ b/app/assets/stylesheets/settings.sass
@@ -1477,6 +1477,8 @@ form, .inputs, .email-settings-section.options
           font-weight: 400
 
   &.open
+    position: relative
+    z-index: 2
     .SumoSelect
       background: #ecf0f1
       box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3)
